WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32046
Incorrect code in WebGLRenderingContext.cpp
https://bugs.webkit.org/show_bug.cgi?id=32046
Summary
Incorrect code in WebGLRenderingContext.cpp
David Levin
Reported
2009-12-01 18:14:33 PST
Created
attachment 44119
[details]
Patch See title.
Attachments
Patch
(2.09 KB, patch)
2009-12-01 18:14 PST
,
David Levin
eric
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2009-12-01 18:18:33 PST
I'll fix the bug title/url on landing (since I created this using bugzilla-tool create-bug)
WebKit Review Bot
Comment 2
2009-12-01 18:18:41 PST
style-queue ran check-webkit-style on
attachment 44119
[details]
without any errors.
Eric Seidel (no email)
Comment 3
2009-12-01 20:22:23 PST
Comment on
attachment 44119
[details]
Patch Your ChangeLog needs to reference the bug. Otherwise this looks fine. Can't be cq'd as is, but I doubt you had planned to use the cq anyway.
David Levin
Comment 4
2009-12-01 22:28:17 PST
Committed as
http://trac.webkit.org/changeset/51588
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug