Incorrect code in WebGLRenderingContext.cpp https://bugs.webkit.org/show_bug.cgi?id=32046

Reviewed by Eric Seidel.

Fix incorrect code that happened to work. != has higher precendence than &.
The simplest fix is to remove the "!= 0" which violates WebKit style
guidelines anyway.

Also added periods to few comments in the same function.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::validateIndexArray):

Canonical link: https://commits.webkit.org/43015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51588 268f45cc-cd09-0410-ab3c-d52691b4dbfc